# pyproject-require-pinned

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
pyproject_require_pinned/: check_dependencies.py  check_versions_pinned.py  load_pyproject.py  main.py
test/: test_require_pinned.py
test/data/: invalid.toml  invalid_dict.toml  invalid_list.toml  valid.toml
